@@ -8,6 +8,8 @@ signal-1.3.0   Release Date: XXXX-XX-XX   Release Manager: TBD
 
       primitive
 
+ ** The function `resample' was fixed to accept integer-type arguments.
+
 ===============================================================================
 signal-1.2.2   Release Date: 2013-03-25   Release Manager: Mike Miller
 ===============================================================================
